# EdgeImpulse_RTApp

./: .gitignore  AzureSphereRTCoreToolchainCandCXX.cmake  CMakeLists.txt  CMakeLists.txt.bak  README.md  app_manifest.json  linker.ld
edge-impulse-sdk/classifier/: ei_run_classifier.h  ei_run_dsp.h
edge-impulse-sdk/dsp/: config.hpp  numpy_types.h
edge-impulse-sdk/dsp/kissfft/: kiss_fftr.cpp
edge-impulse-sdk/porting/: ei_classifier_porting.h
edge-impulse-sdk/porting/azure_sphere/: debug_log.cc  ei_classifier_porting.cpp
edge-impulse-sdk/porting/posix/: ei_classifier_porting.cpp
edge-impulse-sdk/porting/stm32-cubeai/: ei_classifier_porting.cpp
edge-impulse-sdk/porting/threadx/: debug_log.cc  ei_classifier_porting.cpp
edge-impulse-sdk/tensorflow/lite/core/api/: error_reporter.h
edge-impulse-sdk/tensorflow/lite/experimental/micro/: debug_log.h
edge-impulse-sdk/tensorflow/lite/experimental/micro/testing/: micro_test.h
edge-impulse-sdk/tensorflow/lite/micro/: debug_log.h
lib/MT3620_lib/MT3620_M4_Driver/HDL/inc/: hdl_uart.h
lib/mt3620-m4-drivers/: ADC.c  ADC.h  CMakeLists.txt  CPUFreq.h  GPIO.c  GPIO.h  GPT.c  GPT.h  I2CMaster.c  I2CMaster.h  I2S.h  NVIC.h  Platform.h  Print.c  Print.h  SPIMaster.c  SPIMaster.h  UART.c  UART.h  VectorTable.c  VectorTable.h  linker.ld
lib/mt3620-m4-drivers/mt3620/: gpio.h
model-parameters/: dsp_blocks.h  model_metadata.h
src/: demo_threadx.c  main.c  main.xxx.bak  malloc_threadx.h  rtcoremain.c
tflite-model/: tflite-resolver.h  tflite-trained.h
